--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sourdough Sensation</title>
-  <link rel="icon" type="image/x-icon" href="/1330FinalProject/Images/bread.jpg">
+  <link rel="icon" type="image/x-icon" href="/1330Sourdough/Images/bread.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -31,16 +31,16 @@
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
-                <div class="row">
-                        <div id="a" class="col-lg-4">
+                        <div class="row">
+                        <div class="col-lg-4">
                                <h2 class="text-center" > </h2>
                                <img class="img-fluid my-2 rounded-3 border border-white" src="images/theperfectloaftemp.jpeg" alt="Beginner">
                         </div>
-                      <div  id="b" class="col-lg-4">
+                      <div class="col-lg-4">
                                 <h2 class="text-center" ></h2>
                                 <img class="img-fluid my-2 rounded-3 border border-white" src="images/sourdough-bread.jpeg" alt="Walnut">
                         </div>
-                        <div id="c"  class="col-lg-4">
+                        <div class="col-lg-4">
                                 <h2 class="text-center" > </h2> 
                                 <img class="img-fluid my-2 rounded-3 border border-white" src="images/theperfectloaf_beginners_sourdough_bread.jpeg" alt="Dark">
                   </div>
